Kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-api-svc
  labels:
    app: hello-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: hello-api-svc
  selector:
    app: hello-api
